feat(SR-4): implement endpoint to fetch all my service request
