# cm.klg.service-request/src/main/java/cm/klg/service_request/application/outbound/ServiceRequestRepository.java
@@ -1,7 +1,18 @@
 package cm.klg.service_request.application.outbound;
 
+import cm.klg.service_request.application.views.ServiceRequestViews.ServiceRequestView1;
 import cm.klg.service_request.domain.service_request.ServiceRequest;
+import cm.klg.service_request.domain.service_request.ServiceRequestStatus;
+import cm.klg.service_request.domain.user.UserId;
+import cm.klg.service_request.utils.PageData;
+import cm.klg.service_request.utils.PaginationFetchRequest;
 
 public interface ServiceRequestRepository {
   void insert(ServiceRequest serviceRequest);
+
+  PageData<ServiceRequestView1> loadAllMyRequestsAsView1(
+      UserId userId, PaginationFetchRequest pagination);
+
+  PageData<ServiceRequestView1> loadAllMyRequestByStatusAsView1(
+      UserId userId, ServiceRequestStatus status, PaginationFetchRequest pagination);
 }
